Fix backToHome button on iOS
the style property "pointer-events: none" was preventing the click events from being registered.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4429,7 +4429,6 @@ input[name=searchByNameOrUsername] {
         min-width: 3rem;
         height: 3rem;
         cursor: pointer;
-        pointer-events: none;
         opacity: 0.5;
         border-radius: 1.5rem;
     }
